plugins {
    id 'java'
    id "com.github.erdi.webdriver-binaries" version "2.0"
    id "org.sonarqube" version "2.7"
}

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}  
group 'automation.youtrients'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.14.0'
    compile group: 'commons-io', name: 'commons-io', version: '2.6'

    //TestNG dependency for 'main' folder
    compile group: 'org.testng', name: 'testng', version: '6.14.3'
    //TestNG dependency for 'test' folder
    testCompile group: 'org.testng', name: 'testng', version: '6.14.3'

    // This dependency is found on compile classpath of this component and consumers.
    testCompile 'com.google.guava:guava:21.0'
}

test {
    // enable TestNG support (default is JUnit)
    useTestNG(){
        suites 'src/test/resources/testng.xml'
        useDefaultListeners = true
    }

    // show standard out and standard error of the test JVM(s) on the console
    testLogging.showStandardStreams = true

    // set heap size for the test JVM(s)
    minHeapSize = "512m"
    maxHeapSize = "512m"

    // set JVM arguments for the test JVM(s)
    jvmArgs '-XX:MaxPermSize=256m'
}

task wrapper(type: Wrapper) {
    gradleVersion = '2.0'
}

webdriverBinaries {
    chromedriver '2.45.0'
    geckodriver '0.24.0'
}    

